syntax = "proto3";
package game;

option go_package = "github.com/yourproject/game/proto";

// ============================================================================
// БАЗОВЫЕ ТИПЫ
// ============================================================================

// Позиция в мире
message Position {
  int32 x = 1;
  int32 y = 2;
  int32 layer = 3; // 0 = surface, -1, -2 = underground
}

// Вектор направления/скорости
message Vector2 {
  int32 x = 1;
  int32 y = 2;
}

// AABB для коллизий
message AABB {
  int32 min_x = 1;
  int32 min_y = 2;
  int32 max_x = 3;
  int32 max_y = 4;
}

// Timestamp в Unix milliseconds
message Timestamp {
  int64 millis = 1;
}

// ============================================================================
// ENUMS
// ============================================================================

enum MoveMode {
  MOVE_MODE_WALK = 0;
  MOVE_MODE_RUN = 1;
  MOVE_MODE_FAST_RUN = 2;
  MOVE_MODE_SWIM = 3;
}

enum EntityType {
  ENTITY_TYPE_UNKNOWN = 0;
  ENTITY_TYPE_PLAYER = 1;
  ENTITY_TYPE_NPC = 2;
  ENTITY_TYPE_RESOURCE = 3;    // tree, stone, etc
  ENTITY_TYPE_CONTAINER = 4;
  ENTITY_TYPE_BUILDING = 5;
  ENTITY_TYPE_BUILD_SITE = 6;
  ENTITY_TYPE_PLANT = 7;
  ENTITY_TYPE_ITEM_DROP = 8;
  ENTITY_TYPE_MOB = 9;
}

enum InteractionType {
  INTERACTION_TYPE_NONE = 0;
  INTERACTION_TYPE_GATHER = 1;
  INTERACTION_TYPE_OPEN = 2;
  INTERACTION_TYPE_USE = 3;
  INTERACTION_TYPE_ATTACK = 4;
  INTERACTION_TYPE_CRAFT = 5;
  INTERACTION_TYPE_BUILD = 6;
  INTERACTION_TYPE_DRAG = 7;
  INTERACTION_TYPE_TALK = 8;
}

enum ItemQuality {
  ITEM_QUALITY_POOR = 0;
  ITEM_QUALITY_COMMON = 1;
  ITEM_QUALITY_UNCOMMON = 2;
  ITEM_QUALITY_RARE = 3;
  ITEM_QUALITY_EPIC = 4;
  ITEM_QUALITY_LEGENDARY = 5;
}

enum EquipSlot {
  EQUIP_SLOT_NONE = 0;
  EQUIP_SLOT_HEAD = 1;
  EQUIP_SLOT_CHEST = 2;
  EQUIP_SLOT_LEGS = 3;
  EQUIP_SLOT_FEET = 4;
  EQUIP_SLOT_HANDS = 5;
  EQUIP_SLOT_MAIN_HAND = 6;
  EQUIP_SLOT_OFF_HAND = 7;
  EQUIP_SLOT_BACK = 8;
  EQUIP_SLOT_NECK = 9;
  EQUIP_SLOT_RING_1 = 10;
  EQUIP_SLOT_RING_2 = 11;
}

enum ExpType {
  EXP_TYPE_NATURE = 0;
  EXP_TYPE_INDUSTRY = 1;
  EXP_TYPE_COMBAT = 2;
}

enum WeatherType {
  WEATHER_TYPE_CLEAR = 0;
  WEATHER_TYPE_RAIN = 1;
  WEATHER_TYPE_FOG = 2;
  WEATHER_TYPE_STORM = 3;
  WEATHER_TYPE_SNOW = 4;
}

enum ErrorCode {
  ERROR_CODE_NONE = 0;
  ERROR_CODE_INVALID_REQUEST = 1;
  ERROR_CODE_NOT_AUTHENTICATED = 2;
  ERROR_CODE_ENTITY_NOT_FOUND = 3;
  ERROR_CODE_OUT_OF_RANGE = 4;
  ERROR_CODE_INSUFFICIENT_RESOURCES = 5;
  ERROR_CODE_INVENTORY_FULL = 6;
  ERROR_CODE_CANNOT_INTERACT = 7;
  ERROR_CODE_COOLDOWN_ACTIVE = 8;
  ERROR_CODE_INSUFFICIENT_STAMINA = 9;
  ERROR_CODE_TARGET_INVALID = 10;
  ERROR_CODE_PATH_BLOCKED = 11;
  ERROR_CODE_ALREADY_IN_PROGRESS = 12;
  ERROR_CODE_BUILDING_INCOMPLETE = 13;
  ERROR_CODE_RECIPE_UNKNOWN = 14;
}

// ============================================================================
// ITEM & INVENTORY
// ============================================================================

message Item {
  uint32 item_id = 1;           // ID типа предмета
  uint32 quantity = 2;
  ItemQuality quality = 3;
  uint32 durability = 4;        // 0-100, если применимо
  map<string, int32> attributes = 5; // кастомные атрибуты (damage, armor, etc)
}

message InventorySlot {
  uint32 slot_index = 1;
  Item item = 2;
}

message Inventory {
  repeated InventorySlot slots = 1;
  uint32 capacity = 2;
  uint32 weight = 3;           // текущий вес
  uint32 max_weight = 4;
}

message PaperdollSlot {
  EquipSlot slot = 1;
  Item item = 2;
}

message Paperdoll {
  repeated PaperdollSlot slots = 1;
}

// ============================================================================
// ENTITY DATA
// ============================================================================

message EntityStats {
  uint32 health = 1;
  uint32 max_health = 2;
  uint32 stamina = 3;
  uint32 max_stamina = 4;
  uint32 perception = 5;        // радиус видимости
  uint32 stealth = 6;           // скрытность
}

message EntitySkills {
  uint32 nature_exp = 1;
  uint32 nature_level = 2;
  uint32 industry_exp = 3;
  uint32 industry_level = 4;
  uint32 combat_exp = 5;
  uint32 combat_level = 6;
}

message EntityMovement {
  Position position = 1;
  Vector2 velocity = 2;
  MoveMode move_mode = 3;
  Position target_position = 4; // куда движется, если есть
  bool is_moving = 5;
}

message EntityAppearance {
  string sprite_id = 1;
  uint32 animation_state = 2;   // idle, walk, attack, etc
  float rotation = 3;           // радианы
  float scale = 4;
}

// Базовая информация о сущности
message EntitySnapshot {
  uint64 entity_id = 1;
  EntityType type = 2;
  string name = 3;
  EntityMovement movement = 4;
  EntityAppearance appearance = 5;
  EntityStats stats = 6;
  AABB collision_box = 7;
  bool is_interactable = 8;
  InteractionType interaction_type = 9;
  uint32 interaction_range = 10;
  bool is_visible = 11;         // видимость с учётом stealth/perception
  float visibility_factor = 12; // 0.0 - 1.0, для частичной видимости
}

// Полная информация о своём персонаже
message PlayerFullState {
  uint64 entity_id = 1;
  string name = 2;
  EntityMovement movement = 3;
  EntityStats stats = 4;
  EntitySkills skills = 5;
  Inventory inventory = 6;
  Paperdoll paperdoll = 7;
  uint64 dragging_entity_id = 8; // если тащим что-то
}

// ============================================================================
// CHUNK & WORLD
// ============================================================================

message ChunkCoord {
  int32 x = 1;
  int32 y = 2;
  int32 layer = 3;
}

message TileData {
  uint32 tile_id = 1;
  uint32 flags = 2;             // проходимость, и т.д.
}

message ChunkData {
  ChunkCoord coord = 1;
  bytes tiles = 2;              // compressed 128x128 tiles (можно zlib)
  repeated EntitySnapshot static_entities = 3; // деревья, камни
  uint32 version = 4;           // для инвалидации кэша
}

message WorldState {
  WeatherType weather = 1;
  uint32 time_of_day = 2;       // 0-86400 секунд
  float visibility_modifier = 3; // множитель видимости от погоды
}

// ============================================================================
// CRAFT & BUILD
// ============================================================================

message Recipe {
  uint32 recipe_id = 1;
  repeated Item required_items = 2;
  Item result = 3;
  uint32 craft_time_ms = 4;
  ExpType exp_type = 5;
  uint32 exp_amount = 6;
  uint32 required_level = 7;
}

message BuildRecipe {
  uint32 recipe_id = 1;
  repeated Item required_items = 2;
  repeated uint32 required_object_types = 3; // типы объектов (верстак, наковальня)
  uint32 total_build_points = 4;
  uint32 result_building_id = 5;
}

message BuildSiteState {
  uint64 entity_id = 1;
  BuildRecipe recipe = 2;
  uint32 total_build_points = 3;
  uint32 provided_build_points = 4;
  uint32 current_build_points = 5;
  repeated Item placed_items = 6;
  float completion_percent = 7;
}

message PlantState {
  uint64 entity_id = 1;
  uint32 plant_type = 2;
  float growth_progress = 3;    // 0.0 - 1.0
  uint32 time_to_mature_ms = 4;
  bool is_harvestable = 5;
}

// ============================================================================
// CLIENT -> SERVER MESSAGES
// ============================================================================

message C2S_Auth {
  string token = 1;
  string client_version = 2;
}

message C2S_MoveTo {
  Position target = 1;
  MoveMode mode = 2;
}

message C2S_MoveToEntity {
  uint64 entity_id = 1;
  MoveMode mode = 2;
  bool auto_interact = 3;       // автоматически взаимодействовать при достижении
}

message C2S_StopMovement {
  Position final_position = 1;  // клиент отправляет свою финальную позицию
}

message C2S_Interact {
  uint64 entity_id = 1;
  InteractionType type = 2;
}

message C2S_Attack {
  uint64 target_id = 1;
}

message C2S_UseItem {
  uint32 slot_index = 1;
  uint64 target_entity_id = 2;  // опционально, если использование на цель
}

message C2S_EquipItem {
  uint32 inventory_slot = 1;
  EquipSlot equip_slot = 2;
}

message C2S_UnequipItem {
  EquipSlot equip_slot = 1;
}

message C2S_MoveItemInInventory {
  uint32 from_slot = 1;
  uint32 to_slot = 2;
}

message C2S_DropItem {
  uint32 slot_index = 1;
  uint32 quantity = 2;
}

message C2S_SplitStack {
  uint32 slot_index = 1;
  uint32 quantity = 2;
}

message C2S_PickupItem {
  uint64 item_entity_id = 1;
}

message C2S_TransferItem {
  uint64 container_entity_id = 1;
  uint32 from_slot = 2;
  uint32 to_slot = 3;
  uint32 quantity = 4;
  bool from_container = 5;      // true = из контейнера в инвентарь
}

message C2S_Craft {
  uint32 recipe_id = 1;
  uint32 quantity = 2;          // сколько раз крафтить
  uint64 station_entity_id = 3; // ID верстака, если требуется
}

message C2S_Build {
  uint32 recipe_id = 1;
  Position position = 2;
}

message C2S_PlaceItemInBuildSite {
  uint64 build_site_id = 1;
  uint32 inventory_slot = 2;
  uint32 quantity = 3;
}

message C2S_StartDragging {
  uint64 entity_id = 1;
}

message C2S_StopDragging {
  Position final_position = 1;
}

message C2S_ChatMessage {
  string message = 1;
  bool is_global = 2;           // глобальный или локальный чат
}

message C2S_RequestChunk {
  ChunkCoord coord = 1;
}

message C2S_Ping {
  int64 client_time_ms = 1;
}

// Обёртка для всех клиентских сообщений
message ClientMessage {
  uint32 sequence = 1;          // sequence number для ack
  oneof payload {
    C2S_Auth auth = 10;
    C2S_MoveTo move_to = 11;
    C2S_MoveToEntity move_to_entity = 12;
    C2S_StopMovement stop_movement = 13;
    C2S_Interact interact = 14;
    C2S_Attack attack = 15;
    C2S_UseItem use_item = 16;
    C2S_EquipItem equip_item = 17;
    C2S_UnequipItem unequip_item = 18;
    C2S_MoveItemInInventory move_item = 19;
    C2S_DropItem drop_item = 20;
    C2S_SplitStack split_stack = 21;
    C2S_PickupItem pickup_item = 22;
    C2S_TransferItem transfer_item = 23;
    C2S_Craft craft = 24;
    C2S_Build build = 25;
    C2S_PlaceItemInBuildSite place_in_build = 26;
    C2S_StartDragging start_dragging = 27;
    C2S_StopDragging stop_dragging = 28;
    C2S_ChatMessage chat = 29;
    C2S_RequestChunk request_chunk = 30;
    C2S_Ping ping = 31;
  }
}

// ============================================================================
// SERVER -> CLIENT MESSAGES
// ============================================================================

message S2C_AuthResult {
  bool success = 1;
  string error_message = 2;
  uint64 player_entity_id = 3;
  PlayerFullState player_state = 4;
}

message S2C_LoadChunk {
  ChunkData chunk = 1;
}

message S2C_UnloadChunk {
  ChunkCoord coord = 1;
}

message S2C_SpawnEntity {
  EntitySnapshot entity = 1;
}

message S2C_DespawnEntity {
  uint64 entity_id = 1;
}

// Delta update для оптимизации трафика
message EntityDelta {
  uint64 entity_id = 1;
  Position position = 2;        // обязательно если движется
  Vector2 velocity = 3;
  uint32 animation_state = 4;
  float rotation = 5;
  EntityStats stats = 6;        // только если изменились
  bool is_moving = 7;
  MoveMode move_mode = 8;
}

message S2C_EntityUpdate {
  repeated EntityDelta deltas = 1;
  uint32 server_tick = 2;       // для client-side prediction
}

message S2C_PlayerStateUpdate {
  EntityStats stats = 1;
  EntitySkills skills = 2;
  Position position = 3;
}

message S2C_InventoryUpdate {
  repeated InventorySlot slots = 1; // только изменённые слоты
}

message S2C_PaperdollUpdate {
  repeated PaperdollSlot slots = 1;
}

message S2C_ContainerOpen {
  uint64 container_entity_id = 1;
  Inventory container_inventory = 2;
}

message S2C_ContainerClose {
  uint64 container_entity_id = 1;
}

message S2C_ContainerUpdate {
  uint64 container_entity_id = 1;
  repeated InventorySlot slots = 2;
}

message S2C_ItemPickedUp {
  Item item = 1;
  uint32 slot_index = 2;
}

message S2C_ItemDropped {
  uint32 slot_index = 1;
  uint64 dropped_entity_id = 2; // ID выброшенного предмета в мире
  Position position = 3;
}

message S2C_ExpGain {
  ExpType type = 1;
  uint32 amount = 2;
  uint32 new_level = 3;
  bool level_up = 4;
}

message S2C_DamageDealt {
  uint64 attacker_id = 1;
  uint64 target_id = 2;
  uint32 damage = 3;
  bool is_critical = 4;
}

message S2C_EntityDied {
  uint64 entity_id = 1;
  uint64 killer_id = 2;
}

message S2C_ResourceGathered {
  uint64 resource_entity_id = 1;
  Item gathered_item = 2;
  uint32 remaining_quantity = 3; // остаток в ресурсе
}

message S2C_ResourceDepleted {
  uint64 resource_entity_id = 1;
}

message S2C_CraftStarted {
  uint32 recipe_id = 1;
  uint32 estimated_time_ms = 2;
}

message S2C_CraftCompleted {
  uint32 recipe_id = 1;
  Item result = 2;
  uint32 exp_gained = 3;
  ExpType exp_type = 4;
}

message S2C_CraftFailed {
  uint32 recipe_id = 1;
  ErrorCode error = 2;
  string error_message = 3;
}

message S2C_BuildSiteCreated {
  BuildSiteState build_site = 1;
}

message S2C_BuildSiteUpdate {
  BuildSiteState build_site = 1;
}

message S2C_BuildingCompleted {
  uint64 build_site_id = 1;
  uint64 new_building_id = 2;
  EntitySnapshot building = 3;
}

message S2C_PlantGrowthUpdate {
  PlantState plant = 1;
}

message S2C_DragStarted {
  uint64 entity_id = 1;
}

message S2C_DragStopped {
  uint64 entity_id = 1;
  Position final_position = 2;
}

message S2C_VisibilityChanged {
  repeated uint64 visible_entities = 1;   // стали видны
  repeated uint64 invisible_entities = 2; // стали невидимы
}

message S2C_WorldStateUpdate {
  WorldState world_state = 1;
}

message S2C_ChatMessage {
  uint64 sender_entity_id = 1;
  string sender_name = 2;
  string message = 3;
  bool is_global = 4;
  int64 timestamp_ms = 5;
}

message S2C_SystemMessage {
  string message = 1;
  uint32 message_type = 2;      // info, warning, error
}

message S2C_Error {
  ErrorCode code = 1;
  string message = 2;
  uint32 related_sequence = 3;  // sequence клиентского сообщения
}

message S2C_Pong {
  int64 client_time_ms = 1;
  int64 server_time_ms = 2;
}

message S2C_Disconnect {
  string reason = 1;
  uint32 reconnect_delay_ms = 2; // задержка перед реконнектом
}

// Батчинг нескольких событий в один пакет
message S2C_EventBatch {
  repeated S2C_ExpGain exp_gains = 1;
  repeated S2C_DamageDealt damages = 2;
  repeated S2C_ResourceGathered resources = 3;
}

// Обёртка для всех серверных сообщений
message ServerMessage {
  uint32 sequence = 1;          // для ack если нужно
  oneof payload {
    S2C_AuthResult auth_result = 10;
    S2C_LoadChunk load_chunk = 11;
    S2C_UnloadChunk unload_chunk = 12;
    S2C_SpawnEntity spawn_entity = 13;
    S2C_DespawnEntity despawn_entity = 14;
    S2C_EntityUpdate entity_update = 15;
    S2C_PlayerStateUpdate player_state = 16;
    S2C_InventoryUpdate inventory_update = 17;
    S2C_PaperdollUpdate paperdoll_update = 18;
    S2C_ContainerOpen container_open = 19;
    S2C_ContainerClose container_close = 20;
    S2C_ContainerUpdate container_update = 21;
    S2C_ItemPickedUp item_picked = 22;
    S2C_ItemDropped item_dropped = 23;
    S2C_ExpGain exp_gain = 24;
    S2C_DamageDealt damage_dealt = 25;
    S2C_EntityDied entity_died = 26;
    S2C_ResourceGathered resource_gathered = 27;
    S2C_ResourceDepleted resource_depleted = 28;
    S2C_CraftStarted craft_started = 29;
    S2C_CraftCompleted craft_completed = 30;
    S2C_CraftFailed craft_failed = 31;
    S2C_BuildSiteCreated build_site_created = 32;
    S2C_BuildSiteUpdate build_site_update = 33;
    S2C_BuildingCompleted building_completed = 34;
    S2C_PlantGrowthUpdate plant_growth = 35;
    S2C_DragStarted drag_started = 36;
    S2C_DragStopped drag_stopped = 37;
    S2C_VisibilityChanged visibility_changed = 38;
    S2C_WorldStateUpdate world_state = 39;
    S2C_ChatMessage chat = 40;
    S2C_SystemMessage system_message = 41;
    S2C_Error error = 42;
    S2C_Pong pong = 43;
    S2C_Disconnect disconnect = 44;
    S2C_EventBatch event_batch = 45;
  }
}

// ============================================================================
// BATCHING & OPTIMIZATION
// ============================================================================

// Пакет нескольких сообщений для снижения overhead
message MessageBatch {
  repeated ServerMessage messages = 1;
  uint32 batch_id = 2;
}

// Для сжатия повторяющихся данных
message CompressedPayload {
  bytes data = 1;               // compressed protobuf data
  string compression = 2;       // "gzip", "zstd", etc
}

// ============================================================================
// ADMIN & DEBUG (опционально)
// ============================================================================

message C2S_AdminCommand {
  string command = 1;
  repeated string args = 2;
}

message S2C_AdminResponse {
  string result = 1;
  bool success = 2;
}

message S2C_DebugInfo {
  uint32 active_entities = 1;
  uint32 active_chunks = 2;
  uint32 server_tick = 3;
  uint32 players_online = 4;
  uint32 bots_active = 5;
  float server_load = 6;
}

// ============================================================================
// RECONNECT & SESSION
// ============================================================================

message C2S_Reconnect {
  string token = 1;
  uint64 last_sequence = 2;     // последний полученный sequence
}

message S2C_ReconnectSuccess {
  PlayerFullState player_state = 1;
  repeated ServerMessage missed_messages = 2; // сообщения, которые клиент мог пропустить
  uint32 current_sequence = 3;
}